# testapplications

./: .gitignore  COVERAGE.md  FLOW-ANALYSIS.md  README.md  flowreport.mjs  verify.mjs
06-collab-board/: README.md  vercel.json
06-collab-board/backend/: package.json  tsconfig.json
06-collab-board/frontend/: package.json  tsconfig.json
07-dev-forum/: README.md
07-dev-forum/backend/: package.json
07-dev-forum/frontend/: package.json  tsconfig.json
08-knowledge-base/: README.md  package.json
08-knowledge-base/frontend/: package.json  tsconfig.json
09-recipe-share/: README.md
09-recipe-share/backend/: app.py  cache.py  external.py  models.py  repository.py  requirements.txt  storage.py  tasks.py
10-live-polls/: README.md
11-sensor-hub/: README.md
12-ride-share/: README.md
13-warehouse/: README.md
14-alerting/: README.md
15-metrics-dash/: README.md
15-metrics-dash/backend/: Cargo.toml
15-metrics-dash/backend/src/: cache.rs  handlers.rs  main.rs  queue.rs  repo.rs  schema.rs  state.rs  storage.rs
16-auth-svc/: README.md
16-auth-svc/backend/: Cargo.toml
16-auth-svc/backend/src/: cache.rs  db.rs  events.rs  idp.rs  main.rs  storage.rs
16-auth-svc/backend/src/entities/: mod.rs  sessions.rs  users.rs
17-search-svc/: Cargo.toml  README.md
17-search-svc/services/api/: Cargo.toml
17-search-svc/services/api/src/: db.rs  events.rs  main.rs  routes.rs  search.rs
18-banking/: README.md
19-blog/: README.md
20-devtools/: README.md
21-deepshop-ts/: README.md
22-deepdesk-py/: README.md
23-deepfleet-go/: README.md
(+248 files in other folders)
