[package]
name = "metrics-dash-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "numeric"] }
redis = "0.25"
lapin = "2"
google-cloud-storage = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
