[package]
name = "auth-svc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
memcache = "0.17"
azure_storage_blobs = "0.21"
azure_storage = "0.21"
tokio-tungstenite = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
